# peless-svn

./: AUTHORS  Makefile.am  README  auto.sh  build.sh  configure.ac  gmore.cc  gmore.hh  inittime.hh  internat.hh  peless.cc  peless.spec  search.cc  search.hh
BerliOS.docs/: index.html
debian/: control.ubuntu9.04
forGtkmm2-2.2/: INSTALL  Makefile.am  README  configure.ac  gmore.cc  gmore.hh  inittime.hh  peless.cc  peless.spec  peless.spec.SuSE.91  peless.spec.SuSE.92  search.cc
forGtkmm2-2.4/: ChangeLog  INSTALL  Makefile.am  auto.sh  configure.ac  gmore.cc  gmore.hh  internat.hh  peless.FedoraCore2  peless.cc  peless.desktop.in.in  peless.spec  peless.spec.FedoraCore2  peless.spec.FedoraCore5  peless.spec.FedoraCore6  peless.spec.SuSE.10.0  peless.spec.SuSE.10.1  peless.spec.SuSE.10.2  peless.spec.SuSE.90  peless.spec.SuSE.92  peless.spec.SuSE.93  peless.spec.SuSE.scott  peless.spec.data.OpenSuSE-10.2  peless.spec.data.fc6  peless.spec.data.man2007  peless.spec.fixed  peless.spec.man2006  peless.spec.man2007  peless.spec.ubuntu.510  peless.spec.version  peless.suse.spec  peless.xpm  search.cc  search.hh
forGtkmm2-2.4/ubuntu.510/: docs
forGtkmm2-2.4/unusedSpecs/: peless.spec.FedoraCore2  peless.spec.ubuntu.510
spec/: peless.spec.MultiDistro  peless.spec.OpenSuSE  peless.spec.fedora  peless.spec.mandriva  version
ubuntu.510/: control  dirs  rules
ubuntu.704/: changelog  control  copyright
ubuntu.710/: control  rules
unusedSpecs/: peless.spec.FedoraCore5  peless.spec.SuSE.90  peless.spec.SuSE.93  peless.suse.spec
